--- a/eticket-frontend/package.json
+++ b/eticket-frontend/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -13,46 +13,50 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^3.0.0-beta.0",
-    "@angular/animations": "9.0.5",
-    "@angular/common": "9.0.5",
-    "@angular/compiler": "9.0.5",
-    "@angular/core": "9.0.5",
-    "@angular/forms": "9.0.5",
+    "@angular/animations": "10.0.5",
+    "@angular/common": "10.0.5",
+    "@angular/compiler": "10.0.5",
+    "@angular/core": "^10.0.5",
+    "@angular/forms": "10.0.5",
     "@angular/http": "7.2.16",
-    "@angular/localize": "^9.0.5",
-    "@angular/platform-browser": "9.0.5",
-    "@angular/platform-browser-dynamic": "9.0.5",
-    "@angular/router": "9.0.5",
-    "@ng-bootstrap/ng-bootstrap": "6.0.0",
-    "bootstrap": "4.1.3",
-    "chart.js": "2.7.3",
-    "clipboard": "2.0.4",
-    "core-js": "3.6.4",
-    "ngx-clipboard": "13.0.0",
-    "ngx-toastr": "12.0.0",
-    "nouislider": "13.1.1",
-    "rxjs": "6.5.4",
-    "zone.js": "0.10.2"
+    "@angular/localize": "^10.0.5",
+    "@angular/material": "^7.3.2",
+    "@angular/platform-browser": "10.0.5",
+    "@angular/platform-browser-dynamic": "10.0.5",
+    "@angular/router": "10.0.5",
+    "@auth0/angular-jwt": "^5.0.1",
+    "@ng-bootstrap/ng-bootstrap": "7.0.0",
+    "@types/googlemaps": "^3.39.11",
+    "angular-jwt": "^0.1.11",
+    "bootstrap": "4.5.0",
+    "chart.js": "2.9.3",
+    "clipboard": "2.0.6",
+    "core-js": "3.6.5",
+    "ngx-clipboard": "13.0.1",
+    "ngx-toastr": "13.0.0",
+    "nouislider": "14.6.0",
+    "rxjs": "6.6.0",
+    "zone.js": "0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.900.5",
-    "@angular/cli": "9.0.5",
-    "@angular/compiler-cli": "9.0.5",
-    "@angular/language-service": "9.0.5",
-    "@types/jasmine": "3.5.8",
+    "@angular-devkit/build-angular": "0.1000.4",
+    "@angular/cli": "10.0.4",
+    "@angular/compiler-cli": "10.0.5",
+    "@angular/language-service": "10.0.5",
+    "@types/jasmine": "3.5.11",
     "@types/jasminewd2": "2.0.8",
-    "@types/node": "13.7.7",
-    "codelyzer": "5.2.1",
-    "jasmine-core": "3.5.0",
-    "jasmine-spec-reporter": "4.2.1",
-    "karma": "4.4.1",
-    "karma-chrome-launcher": "3.1.0",
-    "karma-coverage-istanbul-reporter": "2.1.1",
-    "karma-jasmine": "3.1.1",
-    "karma-jasmine-html-reporter": "1.5.2",
-    "protractor": "5.4.3",
-    "ts-node": "8.6.2",
-    "tslint": "6.0.0",
-    "typescript": "3.7.5"
+    "@types/node": "14.0.26",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~3.3.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "protractor": "~7.0.0",
+    "ts-node": "8.10.2",
+    "tslint": "~6.1.0",
+    "typescript": "3.9.7"
   }
 }
