--- a/eticket-kat-api/src/main/resources/application.properties
+++ b/eticket-kat-api/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+
+##MongoDb
+#spring.data.mongodb.uri=mongodb://admin:root@localhost:27017/eticket_kat_api
+##spring.data.mongodb.database=eticket-kat-api
+##spring.data.mongodb.auto-index-creation=true
+dockerspring.data.mongodb.uri= mongodb://mongo:27017/eticket_kat_api
+spring.data.mongodb.database=eticket_kat_api
 server.port=8888
