--- a/eticket-backend/src/main/resources/application.yml
+++ b/eticket-backend/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     url: "jdbc:mysql://localhost:3306/eticket_db?serverTimezone=UTC&characterEncoding=UTF-8&sslMode=DISABLED&createDatabaseIfNotExist=true"
-    username: "root"
+    username: ""
     password: ""
     continueOnError: true
     driver-class-name: "com.mysql.cj.jdbc.Driver"
@@ -17,27 +17,28 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: 
+          issuer-uri:
 logging:
   level:
     org.springframework.security: DEBUG
     org.hibernate.SQL: DEBUG
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
 application:
-  access-token: 
+  access-token:
+  api-token:
 app:
   dropbox:
     access:
-      token: 
+      token:
 auth0:
-  client_id: 
-  secret: 
+  client_id:
+  secret:
   management:
-    client_id: 
-    audience: 
-    secret: 
+    client_id:
+    audience:
+    secret:
 
 external:
   kat-api:
-    appId: 1
-    apiKey: 1
+    appId:
+    apiKey:
